--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     height: 500px;
     background: hsl(0, 0%, 100%);
     border-radius: 30px 30px 120px 30px;
+    box-shadow: 5px 5px 15px 5px #000000;
 }
 form {
     height: 100px;
@@ -127,4 +128,16 @@ button::after {
 .numbers {
     color: #FF7E67;
     margin-left: 30px;
+}
+
+@media screen and (max-width:415px) {
+    span {
+        font-size: 2.7rem;
+    }
+}
+
+@media screen and (max-width:381px) {
+    span {
+        font-size: 2.5rem;
+    }
 }
